--- a/src/app/permission-treeview/permission-treeview.component.scss
+++ b/src/app/permission-treeview/permission-treeview.component.scss
@@ -17,10 +17,6 @@
     border-bottom: 1px solid #eee;
 }
 
-h3 {
-    color: #333;
-    font-size: 18px;
-}
 }
 
 .profile-section {
@@ -66,15 +62,17 @@ h3 {
 }
 
 .permission-section {
-  h3 {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
+  margin-top: 20px;
 
   .permission-box {
     border: 1px solid #ddd;
     border-radius: 8px;
     padding: 15px;
   }
-
+.permission-setting {
+  title {
+    font-size: 18px;
+   font-weight: bold;
+  }
+}
 }
