--- a/src/app/permission-treeview/permission-treeview.component.scss
+++ b/src/app/permission-treeview/permission-treeview.component.scss
@@ -8,14 +8,6 @@
     text-align: center;
     margin-bottom: 30px;
   }
-  .header-with-search {
-    display: flex;             
-    justify-content: space-between; 
-    align-items: center;       
-    margin-bottom: 15px;       
-    padding-bottom: 10px;      
-    border-bottom: 1px solid #eee;
-}
 
 }
 
@@ -63,16 +55,9 @@
 
 .permission-section {
   margin-top: 20px;
-
-  .permission-box {
-    border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 15px;
-  }
-.permission-setting {
-  title {
-    font-size: 18px;
-   font-weight: bold;
-  }
 }
+.title {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 15px;
 }
